# terminal-game

./: .gitignore  Dockerfile  README.md  release.sh
documentation/: ascii.txt  dungeon_generation.md
documentation/design/: ascii.txt  dungeon_room_ascii.txt  game.md  items.txt  shop.txt
game/: Cargo.toml
game/src/: character.rs  config.rs  currency.rs  drops.rs  dungeon.rs  enemy.rs  error.rs  fight.rs  game.rs  game_data.rs  items.rs  lib.rs  main.rs  main_menu.rs  menu.rs  session.rs  shop.rs  treasure.rs  util.rs  validation.rs
game/src/dungeon/: room.rs
game/src/menu/: character.rs  dungeon.rs  enemy.rs  equipment.rs  inventory.rs  main_menu.rs  shop.rs  skill.rs  stats.rs
