[package]
name = "terminal_rpg"
version = "0.1.1"
edition = "2021"
description = "TUI game for the terminal."
readme = "../README.md"
license = "GPL-3.0 license"
repository = "https://github.com/hollowdll/terminal-game"
keywords = ["terminal", "game", "tui"]
categories = ["command-line-interface"]

[[bin]]
name = "terminal_rpg"
path = "./src/main.rs"

[dependencies]
crossterm = "0.28"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8.5"
